--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,22 +1,53 @@
 {
-  "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-925d4e79.css",
-    "src": "src/routes/+layout.css"
-  },
   "src/routes/tera-type-calculator.html/+page.css": {
     "file": "_app/immutable/assets/_page-f92fbb69.css",
     "src": "src/routes/tera-type-calculator.html/+page.css"
-  },
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-19ae1971.css",
-    "src": "src/routes/+page.css"
   },
   "sendEvent.css": {
     "file": "_app/immutable/assets/sendEvent-30abcd50.css",
     "src": "sendEvent.css"
   },
+  "src/routes/+layout.css": {
+    "file": "_app/immutable/assets/_layout-925d4e79.css",
+    "src": "src/routes/+layout.css"
+  },
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-19ae1971.css",
+    "src": "src/routes/+page.css"
+  },
+  "__page-da46b06b.js": {
+    "file": "_app/immutable/chunks/_page-da46b06b.js"
+  },
+  "_stores-759b1ad4.js": {
+    "file": "_app/immutable/chunks/stores-759b1ad4.js",
+    "imports": [
+      "_index-6c4a4d91.js",
+      "_singletons-83ddacde.js"
+    ]
+  },
+  "__page-fca24c55.js": {
+    "file": "_app/immutable/chunks/_page-fca24c55.js"
+  },
+  "_singletons-83ddacde.js": {
+    "file": "_app/immutable/chunks/singletons-83ddacde.js",
+    "imports": [
+      "_index-6c4a4d91.js"
+    ]
+  },
+  "_interfaces-4435d131.js": {
+    "file": "_app/immutable/chunks/interfaces-4435d131.js"
+  },
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-8b80dc9a.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-da46b06b.js",
+      "src/routes/+page.svelte"
+    ]
+  },
   ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-32cb0b6e.js",
+    "file": "_app/immutable/chunks/0-13058399.js",
     "src": ".svelte-kit/generated/nodes/0.js",
     "isDynamicEntry": true,
     "imports": [
@@ -26,6 +57,17 @@
   "src/routes/type-table.html/+page.ts": {
     "file": "_app/immutable/modules/pages/type-table.html/_page.ts-94291217.js",
     "src": "src/routes/type-table.html/+page.ts",
+    "isEntry": true,
+    "imports": [
+      "__page-e94d8ac7.js"
+    ]
+  },
+  "__page-90a7f2f4.js": {
+    "file": "_app/immutable/chunks/_page-90a7f2f4.js"
+  },
+  "src/routes/explain-video.html/+page.ts": {
+    "file": "_app/immutable/modules/pages/explain-video.html/_page.ts-94291217.js",
+    "src": "src/routes/explain-video.html/+page.ts",
     "isEntry": true,
     "imports": [
       "__page-fca24c55.js"
@@ -39,43 +81,17 @@
       "__page-90a7f2f4.js"
     ]
   },
-  "_GA-122f2b64.js": {
-    "file": "_app/immutable/chunks/GA-122f2b64.js",
-    "imports": [
-      "_index-6c4a4d91.js"
-    ]
+  "__page-e94d8ac7.js": {
+    "file": "_app/immutable/chunks/_page-e94d8ac7.js"
   },
-  ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-52b3a2d9.js",
-    "src": ".svelte-kit/generated/nodes/1.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-aadcc690.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
+  ".svelte-kit/generated/nodes/4.js": {
+    "file": "_app/immutable/chunks/4-bd91d659.js",
+    "src": ".svelte-kit/generated/nodes/4.js",
     "isDynamicEntry": true,
     "imports": [
       "__page-90a7f2f4.js",
       "src/routes/tera-type-calculator.html/+page.svelte"
     ]
-  },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-372fdebe.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-da46b06b.js",
-      "src/routes/+page.svelte"
-    ]
-  },
-  "__page-da46b06b.js": {
-    "file": "_app/immutable/chunks/_page-da46b06b.js"
-  },
-  "__page-fca24c55.js": {
-    "file": "_app/immutable/chunks/_page-fca24c55.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
     "file": "_app/immutable/components/error.svelte-298b859f.js",
@@ -86,26 +102,45 @@
       "_stores-759b1ad4.js"
     ]
   },
-  "_singletons-83ddacde.js": {
-    "file": "_app/immutable/chunks/singletons-83ddacde.js",
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-7c00f84f.js",
+    "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-fca24c55.js",
+      "src/routes/explain-video.html/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/1.js": {
+    "file": "_app/immutable/chunks/1-52b3a2d9.js",
+    "src": ".svelte-kit/generated/nodes/1.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
+    ]
+  },
+  "_GA-e96febe3.js": {
+    "file": "_app/immutable/chunks/GA-e96febe3.js",
     "imports": [
       "_index-6c4a4d91.js"
     ]
   },
-  ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-04de27ac.js",
-    "src": ".svelte-kit/generated/nodes/4.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-fca24c55.js",
-      "src/routes/type-table.html/+page.svelte"
-    ]
-  },
-  "_stores-759b1ad4.js": {
-    "file": "_app/immutable/chunks/stores-759b1ad4.js",
+  "src/routes/explain-video.html/+page.svelte": {
+    "file": "_app/immutable/components/pages/explain-video.html/_page.svelte-96818702.js",
+    "src": "src/routes/explain-video.html/+page.svelte",
+    "isEntry": true,
     "imports": [
       "_index-6c4a4d91.js",
-      "_singletons-83ddacde.js"
+      "_GA-e96febe3.js"
+    ]
+  },
+  ".svelte-kit/generated/nodes/5.js": {
+    "file": "_app/immutable/chunks/5-8a3ea7d3.js",
+    "src": ".svelte-kit/generated/nodes/5.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-e94d8ac7.js",
+      "src/routes/type-table.html/+page.svelte"
     ]
   },
   "src/routes/+page.ts": {
@@ -116,35 +151,21 @@
       "__page-da46b06b.js"
     ]
   },
-  "__page-90a7f2f4.js": {
-    "file": "_app/immutable/chunks/_page-90a7f2f4.js"
-  },
   "src/routes/type-table.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/type-table.html/_page.svelte-acf8aece.js",
+    "file": "_app/immutable/components/pages/type-table.html/_page.svelte-db9949f5.js",
     "src": "src/routes/type-table.html/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-6c4a4d91.js",
-      "_GA-122f2b64.js"
-    ]
-  },
-  "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-a4ec7c68.js",
-    "src": "src/routes/+layout.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-6c4a4d91.js",
-      "_stores-759b1ad4.js"
-    ],
-    "css": [
-      "_app/immutable/assets/_layout-925d4e79.css"
+      "_interfaces-4435d131.js",
+      "_GA-e96febe3.js"
     ]
   },
   "_index-6c4a4d91.js": {
     "file": "_app/immutable/chunks/index-6c4a4d91.js"
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-223ca8bd.js",
+    "file": "_app/immutable/start-fe072358.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
@@ -156,40 +177,55 @@
       ".svelte-kit/generated/nodes/1.js",
       ".svelte-kit/generated/nodes/2.js",
       ".svelte-kit/generated/nodes/3.js",
-      ".svelte-kit/generated/nodes/4.js"
+      ".svelte-kit/generated/nodes/4.js",
+      ".svelte-kit/generated/nodes/5.js"
+    ]
+  },
+  "src/routes/+layout.svelte": {
+    "file": "_app/immutable/components/pages/_layout.svelte-bdebb4ad.js",
+    "src": "src/routes/+layout.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-6c4a4d91.js",
+      "_stores-759b1ad4.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_layout-925d4e79.css"
     ]
   },
   "src/routes/tera-type-calculator.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-e725d4b6.js",
+    "file": "_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-f4c0c4e0.js",
     "src": "src/routes/tera-type-calculator.html/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-6c4a4d91.js",
-      "_GA-122f2b64.js",
-      "_sendEvent-a25972e1.js"
+      "_GA-e96febe3.js",
+      "_sendEvent-9719e596.js",
+      "_interfaces-4435d131.js"
     ],
     "css": [
       "_app/immutable/assets/_page-f92fbb69.css"
     ]
   },
-  "_sendEvent-a25972e1.js": {
-    "file": "_app/immutable/chunks/sendEvent-a25972e1.js",
+  "_sendEvent-9719e596.js": {
+    "file": "_app/immutable/chunks/sendEvent-9719e596.js",
     "imports": [
       "_index-6c4a4d91.js",
-      "_GA-122f2b64.js"
+      "_interfaces-4435d131.js"
     ],
     "css": [
       "_app/immutable/assets/sendEvent-30abcd50.css"
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-5864b890.js",
+    "file": "_app/immutable/components/pages/_page.svelte-6ad53190.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
       "_index-6c4a4d91.js",
-      "_sendEvent-a25972e1.js",
-      "_GA-122f2b64.js"
+      "_sendEvent-9719e596.js",
+      "_interfaces-4435d131.js",
+      "_GA-e96febe3.js"
     ],
     "css": [
       "_app/immutable/assets/_page-19ae1971.css"
