--- a/vite-manifest.json
+++ b/vite-manifest.json
@@ -1,27 +1,41 @@
 {
-  "src/routes/+page.css": {
-    "file": "_app/immutable/assets/_page-ca1f42aa.css",
-    "src": "src/routes/+page.css"
+  "src/routes/tera-type-calculator.html/+page.css": {
+    "file": "_app/immutable/assets/_page-f92fbb69.css",
+    "src": "src/routes/tera-type-calculator.html/+page.css"
   },
   "sendEvent.css": {
     "file": "_app/immutable/assets/sendEvent-30abcd50.css",
     "src": "sendEvent.css"
   },
-  "src/routes/tera-type-calculator.html/+page.css": {
-    "file": "_app/immutable/assets/_page-f92fbb69.css",
-    "src": "src/routes/tera-type-calculator.html/+page.css"
+  "src/routes/+page.css": {
+    "file": "_app/immutable/assets/_page-ca1f42aa.css",
+    "src": "src/routes/+page.css"
   },
   "src/routes/+layout.css": {
-    "file": "_app/immutable/assets/_layout-93601371.css",
+    "file": "_app/immutable/assets/_layout-6964b58b.css",
     "src": "src/routes/+layout.css"
   },
-  ".svelte-kit/generated/nodes/4.js": {
-    "file": "_app/immutable/chunks/4-1e074daf.js",
-    "src": ".svelte-kit/generated/nodes/4.js",
-    "isDynamicEntry": true,
+  "__page-da46b06b.js": {
+    "file": "_app/immutable/chunks/_page-da46b06b.js"
+  },
+  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
+    "file": "_app/immutable/components/error.svelte-d174fa69.js",
+    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
+    "isEntry": true,
     "imports": [
-      "__page-da46b06b.js",
-      "src/routes/tera-type-calculator.html/+page.svelte"
+      "_index-7126a34b.js",
+      "_stores-282def3e.js"
+    ]
+  },
+  "_interfaces-64f496f9.js": {
+    "file": "_app/immutable/chunks/interfaces-64f496f9.js"
+  },
+  "src/routes/privacy-policy.html/+page.ts": {
+    "file": "_app/immutable/modules/pages/privacy-policy.html/_page.ts-94291217.js",
+    "src": "src/routes/privacy-policy.html/+page.ts",
+    "isEntry": true,
+    "imports": [
+      "__page-e94d8ac7.js"
     ]
   },
   "src/routes/type-table.html/+page.ts": {
@@ -32,74 +46,65 @@
       "__page-fca24c55.js"
     ]
   },
-  "node_modules/@sveltejs/kit/src/runtime/components/error.svelte": {
-    "file": "_app/immutable/components/error.svelte-298b859f.js",
-    "src": "node_modules/@sveltejs/kit/src/runtime/components/error.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-6c4a4d91.js",
-      "_stores-759b1ad4.js"
-    ]
-  },
-  "_GA-e96febe3.js": {
-    "file": "_app/immutable/chunks/GA-e96febe3.js",
-    "imports": [
-      "_index-6c4a4d91.js"
-    ]
-  },
-  "__page-da46b06b.js": {
-    "file": "_app/immutable/chunks/_page-da46b06b.js"
-  },
-  "__page-fca24c55.js": {
-    "file": "_app/immutable/chunks/_page-fca24c55.js"
-  },
-  "__page-90a7f2f4.js": {
-    "file": "_app/immutable/chunks/_page-90a7f2f4.js"
-  },
   "src/routes/tera-type-calculator.html/+page.ts": {
     "file": "_app/immutable/modules/pages/tera-type-calculator.html/_page.ts-94291217.js",
     "src": "src/routes/tera-type-calculator.html/+page.ts",
     "isEntry": true,
     "imports": [
-      "__page-da46b06b.js"
-    ]
-  },
-  "src/routes/+page.ts": {
-    "file": "_app/immutable/modules/pages/_page.ts-dc85b7cd.js",
-    "src": "src/routes/+page.ts",
-    "isEntry": true,
-    "imports": [
-      "__page-e94d8ac7.js"
-    ]
-  },
-  "src/routes/howto-video.html/+page.ts": {
-    "file": "_app/immutable/modules/pages/howto-video.html/_page.ts-94291217.js",
-    "src": "src/routes/howto-video.html/+page.ts",
-    "isEntry": true,
-    "imports": [
       "__page-90a7f2f4.js"
     ]
   },
-  "_stores-759b1ad4.js": {
-    "file": "_app/immutable/chunks/stores-759b1ad4.js",
+  "_singletons-c091dfce.js": {
+    "file": "_app/immutable/chunks/singletons-c091dfce.js",
     "imports": [
-      "_index-6c4a4d91.js",
-      "_singletons-83ddacde.js"
+      "_index-7126a34b.js"
+    ]
+  },
+  ".svelte-kit/generated/nodes/0.js": {
+    "file": "_app/immutable/chunks/0-839d7731.js",
+    "src": ".svelte-kit/generated/nodes/0.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "src/routes/+layout.svelte"
     ]
   },
   ".svelte-kit/generated/nodes/1.js": {
-    "file": "_app/immutable/chunks/1-52b3a2d9.js",
+    "file": "_app/immutable/chunks/1-46065398.js",
     "src": ".svelte-kit/generated/nodes/1.js",
     "isDynamicEntry": true,
     "imports": [
       "node_modules/@sveltejs/kit/src/runtime/components/error.svelte"
     ]
   },
-  "__page-e94d8ac7.js": {
-    "file": "_app/immutable/chunks/_page-e94d8ac7.js"
+  ".svelte-kit/generated/nodes/2.js": {
+    "file": "_app/immutable/chunks/2-b5789769.js",
+    "src": ".svelte-kit/generated/nodes/2.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-da46b06b.js",
+      "src/routes/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/4.js": {
+    "file": "_app/immutable/chunks/4-0ff4b5a2.js",
+    "src": ".svelte-kit/generated/nodes/4.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-90a7f2f4.js",
+      "src/routes/tera-type-calculator.html/+page.svelte"
+    ]
+  },
+  ".svelte-kit/generated/nodes/3.js": {
+    "file": "_app/immutable/chunks/3-10d473af.js",
+    "src": ".svelte-kit/generated/nodes/3.js",
+    "isDynamicEntry": true,
+    "imports": [
+      "__page-e94d8ac7.js",
+      "src/routes/privacy-policy.html/+page.svelte"
+    ]
   },
   ".svelte-kit/generated/nodes/5.js": {
-    "file": "_app/immutable/chunks/5-817f30a6.js",
+    "file": "_app/immutable/chunks/5-3852caa8.js",
     "src": ".svelte-kit/generated/nodes/5.js",
     "isDynamicEntry": true,
     "imports": [
@@ -107,70 +112,77 @@
       "src/routes/type-table.html/+page.svelte"
     ]
   },
-  "_singletons-83ddacde.js": {
-    "file": "_app/immutable/chunks/singletons-83ddacde.js",
-    "imports": [
-      "_index-6c4a4d91.js"
-    ]
-  },
-  ".svelte-kit/generated/nodes/0.js": {
-    "file": "_app/immutable/chunks/0-d26effef.js",
-    "src": ".svelte-kit/generated/nodes/0.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "src/routes/+layout.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/2.js": {
-    "file": "_app/immutable/chunks/2-d1770cf5.js",
-    "src": ".svelte-kit/generated/nodes/2.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-e94d8ac7.js",
-      "src/routes/+page.svelte"
-    ]
-  },
-  ".svelte-kit/generated/nodes/3.js": {
-    "file": "_app/immutable/chunks/3-81a669e2.js",
-    "src": ".svelte-kit/generated/nodes/3.js",
-    "isDynamicEntry": true,
-    "imports": [
-      "__page-90a7f2f4.js",
-      "src/routes/howto-video.html/+page.svelte"
-    ]
-  },
-  "_interfaces-64f496f9.js": {
-    "file": "_app/immutable/chunks/interfaces-64f496f9.js"
-  },
-  "src/routes/howto-video.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/howto-video.html/_page.svelte-9bc2fbb4.js",
-    "src": "src/routes/howto-video.html/+page.svelte",
+  "src/routes/+page.ts": {
+    "file": "_app/immutable/modules/pages/_page.ts-dc85b7cd.js",
+    "src": "src/routes/+page.ts",
     "isEntry": true,
     "imports": [
-      "_index-6c4a4d91.js",
-      "_GA-e96febe3.js"
+      "__page-da46b06b.js"
     ]
   },
+  "_GA-d336c68f.js": {
+    "file": "_app/immutable/chunks/GA-d336c68f.js",
+    "imports": [
+      "_index-7126a34b.js"
+    ]
+  },
+  "_stores-282def3e.js": {
+    "file": "_app/immutable/chunks/stores-282def3e.js",
+    "imports": [
+      "_index-7126a34b.js",
+      "_singletons-c091dfce.js"
+    ]
+  },
+  "__page-fca24c55.js": {
+    "file": "_app/immutable/chunks/_page-fca24c55.js"
+  },
+  "__page-90a7f2f4.js": {
+    "file": "_app/immutable/chunks/_page-90a7f2f4.js"
+  },
+  "__page-e94d8ac7.js": {
+    "file": "_app/immutable/chunks/_page-e94d8ac7.js"
+  },
   "src/routes/type-table.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/type-table.html/_page.svelte-c352d6fa.js",
+    "file": "_app/immutable/components/pages/type-table.html/_page.svelte-babdfe03.js",
     "src": "src/routes/type-table.html/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-6c4a4d91.js",
+      "_index-7126a34b.js",
       "_interfaces-64f496f9.js",
-      "_GA-e96febe3.js"
+      "_GA-d336c68f.js"
     ]
   },
-  "_index-6c4a4d91.js": {
-    "file": "_app/immutable/chunks/index-6c4a4d91.js"
+  "_index-7126a34b.js": {
+    "file": "_app/immutable/chunks/index-7126a34b.js"
+  },
+  "src/routes/+layout.svelte": {
+    "file": "_app/immutable/components/pages/_layout.svelte-a131feb9.js",
+    "src": "src/routes/+layout.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-7126a34b.js",
+      "_stores-282def3e.js"
+    ],
+    "css": [
+      "_app/immutable/assets/_layout-6964b58b.css"
+    ]
+  },
+  "src/routes/privacy-policy.html/+page.svelte": {
+    "file": "_app/immutable/components/pages/privacy-policy.html/_page.svelte-8e6f148e.js",
+    "src": "src/routes/privacy-policy.html/+page.svelte",
+    "isEntry": true,
+    "imports": [
+      "_index-7126a34b.js",
+      "_GA-d336c68f.js"
+    ]
   },
   "node_modules/@sveltejs/kit/src/runtime/client/start.js": {
-    "file": "_app/immutable/start-0d5f8b15.js",
+    "file": "_app/immutable/start-2484e949.js",
     "src": "node_modules/@sveltejs/kit/src/runtime/client/start.js",
     "isEntry": true,
     "imports": [
-      "_index-6c4a4d91.js",
-      "_singletons-83ddacde.js"
+      "_index-7126a34b.js",
+      "_singletons-c091dfce.js"
     ],
     "dynamicImports": [
       ".svelte-kit/generated/nodes/0.js",
@@ -181,36 +193,24 @@
       ".svelte-kit/generated/nodes/5.js"
     ]
   },
-  "src/routes/+layout.svelte": {
-    "file": "_app/immutable/components/pages/_layout.svelte-a6024bcf.js",
-    "src": "src/routes/+layout.svelte",
-    "isEntry": true,
-    "imports": [
-      "_index-6c4a4d91.js",
-      "_stores-759b1ad4.js"
-    ],
-    "css": [
-      "_app/immutable/assets/_layout-93601371.css"
-    ]
-  },
   "src/routes/tera-type-calculator.html/+page.svelte": {
-    "file": "_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-51006e9d.js",
+    "file": "_app/immutable/components/pages/tera-type-calculator.html/_page.svelte-64546ee5.js",
     "src": "src/routes/tera-type-calculator.html/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-6c4a4d91.js",
-      "_GA-e96febe3.js",
-      "_sendEvent-3d2d4ae9.js",
+      "_index-7126a34b.js",
+      "_GA-d336c68f.js",
+      "_sendEvent-be330808.js",
       "_interfaces-64f496f9.js"
     ],
     "css": [
       "_app/immutable/assets/_page-f92fbb69.css"
     ]
   },
-  "_sendEvent-3d2d4ae9.js": {
-    "file": "_app/immutable/chunks/sendEvent-3d2d4ae9.js",
+  "_sendEvent-be330808.js": {
+    "file": "_app/immutable/chunks/sendEvent-be330808.js",
     "imports": [
-      "_index-6c4a4d91.js",
+      "_index-7126a34b.js",
       "_interfaces-64f496f9.js"
     ],
     "css": [
@@ -218,14 +218,14 @@
     ]
   },
   "src/routes/+page.svelte": {
-    "file": "_app/immutable/components/pages/_page.svelte-6f0d5da6.js",
+    "file": "_app/immutable/components/pages/_page.svelte-f88efa3a.js",
     "src": "src/routes/+page.svelte",
     "isEntry": true,
     "imports": [
-      "_index-6c4a4d91.js",
-      "_sendEvent-3d2d4ae9.js",
+      "_index-7126a34b.js",
+      "_sendEvent-be330808.js",
       "_interfaces-64f496f9.js",
-      "_GA-e96febe3.js"
+      "_GA-d336c68f.js"
     ],
     "css": [
       "_app/immutable/assets/_page-ca1f42aa.css"
